[package]
name = "persistent-art-toy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.129", features = ["raw_value"] }
storekey = "0.5.0"
derive_more = { version = "1", features = ["from"] }
